--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,6 @@
 PORT=3000
-MONGO_URI =mongodb+srv://anssattar:password123_mongodb@cluster0.i0ov3.mongodb.net/twitterclone
+MONGO_URI=mongodb+srv://anssattar:password123_mongodb@cluster0.i0ov3.mongodb.net/twitterclone
 
-TOKEN_SECRET = SECRETF
+TOKEN_SECRET=SECRETF
+
+FRONTEND_URL=http://localhost:5173
