--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,4 @@ MONGO_URI=mongodb+srv://anssattar:password123_mongodb@cluster0.i0ov3.mongodb.net
 TOKEN_SECRET=SECRETF
 
 FRONTEND_URL=http://localhost:5173
+FRONTEND_URL_PROD=https://twitterclone-frontend-beta.vercel.app
